// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWS Access Point Configuration screen first Import access point flow name field should be disabled and value should be of given access point 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="bp3-form-group bp3-disabled lbNameInput"
            data-id="lbName-0"
          >
            <label
              class="bp3-label"
              for="lbName"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="lbFormFirst_lbName"
              >
                Provide a name for the Load balancer
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group bp3-disabled"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  disabled=""
                  name="lbName"
                  type="text"
                  value="Mock Access Point"
                />
              </div>
            </div>
          </div>
          <p
            class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
          >
            The Application Load Balancer does not have a domain name associated with it. The rule directs traffic to resources through the Load balancer. Hence the Load balancer requires a domain name to be accessed by th rule
          </p>
          <div
            class="Layout--horizontal StyledProps--main"
            style="min-height: 330px;"
          >
            <div
              class="configFormWrapper"
            >
              <p
                class="StyledProps--font StyledProps--main configFormHeader StyledProps--color StyledProps--color-grey500"
              >
                Select your preferred DNS provider and perform the mapping
              </p>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio radioBtn StyledProps--main"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Route 53
                </label>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="hostedZoneId-1"
                  style="width: 70%; margin-bottom: 0px;"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="hostedZoneId"
                            placeholder="- ce.co.accessPoint.select.route53zone -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <label
                class="bp3-control bp3-radio StyledProps--font Radio--radio radioBtn StyledProps--main"
              >
                <input
                  checked=""
                  type="radio"
                />
                <span
                  class="bp3-control-indicator"
                />
                Others
              </label>
              <div
                class="Layout--horizontal StyledProps--main customDomainContainer"
              >
                <div
                  class="bp3-form-group"
                  data-id="customDomainPrefix-2"
                  style="flex: 2;"
                >
                  <label
                    class="bp3-label"
                    for="customDomainPrefix"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="lbFormFirst_customDomainPrefix"
                    >
                      Enter Domain name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="customDomainPrefix"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="othersHelpTextContainer"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <img
                  src="test-file-stub"
                />
                <p
                  class="StyledProps--font StyledProps--main helpTextHeader"
                >
                  Help: When using Other DNS providers like goDaddy, Hostigator, etc.
                </p>
              </div>
              <hr />
              <p
                class="StyledProps--font StyledProps--main"
              >
                To map your custom domain to hostname, you need to:
              </p>
              <ol
                type="1"
              >
                <li>
                  Add a CNAME record with your Custom domain, qa.yourcompany.co as the host
                </li>
                <li>
                  Point the record to your Harness domain, 27-nginx-test-1.gateway.harness.io. The CNAME record should look like this
                </li>
                <li>
                  Save your settings. It may take a full day for the settings to propagate across the global Domain Name System.
                </li>
              </ol>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`AWS Access Point Configuration screen first render and fill form 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="bp3-form-group lbNameInput"
            data-id="lbName-0"
          >
            <label
              class="bp3-label"
              for="lbName"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="lbFormFirst_lbName"
              >
                Provide a name for the Load balancer
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="lbName"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <p
            class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
          >
            The Application Load Balancer does not have a domain name associated with it. The rule directs traffic to resources through the Load balancer. Hence the Load balancer requires a domain name to be accessed by th rule
          </p>
          <div
            class="Layout--horizontal StyledProps--main"
            style="min-height: 330px;"
          >
            <div
              class="configFormWrapper"
            >
              <p
                class="StyledProps--font StyledProps--main configFormHeader StyledProps--color StyledProps--color-grey500"
              >
                Select your preferred DNS provider and perform the mapping
              </p>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio radioBtn StyledProps--main"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Route 53
                </label>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="hostedZoneId-1"
                  style="width: 70%; margin-bottom: 0px;"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="hostedZoneId"
                            placeholder="- ce.co.accessPoint.select.route53zone -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <label
                class="bp3-control bp3-radio StyledProps--font Radio--radio radioBtn StyledProps--main"
              >
                <input
                  checked=""
                  type="radio"
                />
                <span
                  class="bp3-control-indicator"
                />
                Others
              </label>
              <div
                class="Layout--horizontal StyledProps--main customDomainContainer"
              >
                <div
                  class="bp3-form-group"
                  data-id="customDomainPrefix-2"
                  style="flex: 2;"
                >
                  <label
                    class="bp3-label"
                    for="customDomainPrefix"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="lbFormFirst_customDomainPrefix"
                    >
                      Enter Domain name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="customDomainPrefix"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="othersHelpTextContainer"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <img
                  src="test-file-stub"
                />
                <p
                  class="StyledProps--font StyledProps--main helpTextHeader"
                >
                  Help: When using Other DNS providers like goDaddy, Hostigator, etc.
                </p>
              </div>
              <hr />
              <p
                class="StyledProps--font StyledProps--main"
              >
                To map your custom domain to hostname, you need to:
              </p>
              <ol
                type="1"
              >
                <li>
                  Add a CNAME record with your Custom domain, qa.yourcompany.co as the host
                </li>
                <li>
                  Point the record to your Harness domain, 27-nginx-test-1.gateway.harness.io. The CNAME record should look like this
                </li>
                <li>
                  Save your settings. It may take a full day for the settings to propagate across the global Domain Name System.
                </li>
              </ol>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
